--- a/Quiz 3 - Cat Catcher/index.html
+++ b/Quiz 3 - Cat Catcher/index.html
@@ -20,6 +20,7 @@
             src: url("./assets/fonts/OvermuchRegular.ttf") format("truetype");
         }
     </style>
+    <link rel="icon" type="image/png" href="./assets/images/icon.png">
 </head>
 <body>
 	<!-- Font Loader -->
